opam-version: "2.0"
name: "satysfi-class-cv"
version: "0.1"
synopsis: "Japanese-style CV form"
description: """Japanese-style CV form"""

maintainer: "Yasuo Ozu <yasuo@ozu.email>"
authors: "Yasuo Ozu <yasuo@ozu.email>"
license: "MIT"
homepage: "https://github.com/yasuo-ozu/satysfi-class-cv"
bug-reports: "https://github.com/yasuo-ozu/satysfi-class-cv/issues"
dev-repo: "git+https://github.com/yasuo-ozu/satysfi-class-cv.git"

depends: [
  "satysfi" {>= "0.0.5" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.3"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-cv"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]


